style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: black;
    color: white;
    overflow-x: hidden;
}

.nav-links {
    justify-content: space-between;
    padding: 0 30px;
    list-style: none;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    width: 100%;
    position: absolute;
    transform: translate(-50%, -50%);
    top: 5%;
    left: 50%;
}

.nav-links ul {
    list-style: none;
    display: flex;
    justify-content: flex-end;
}

.nav-links li {
    display: inline-block;
    margin: 0 60px;
}

.nav-links a {
    text-decoration: none;
    color: white;
    font-size: 20px;
    padding: 20px 20px;
    transition: 0.3s ease;
}

.nav-links a:hover {
    color: #848484;
    border-radius: 5px;
}

h1 {
    font-size: 70px;
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 100;
    position: absolute;
    transform: translate(-50%, -50%);
    top: 40%;
    left: 50%;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.fade-in {
    animation: fade-in 2s ease-in-out forwards;
}

.fade-in-fast {
    animation: fade-in 1s ease-in-out forwards;
}

@keyframes slide-in {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

.slide-in {
    animation: slide-in 1s ease-in-out forwards;
}

main {
    margin-top: 700px;
}

main p {
    font-size: 20px;
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 100;
    top: 60%;
    left: 50%;
}

#projects {
    opacity: 0;
    margin-bottom: 250px;
}

#projects h2 {
    padding: 100px 0;
}

h2 {
    font-size: 50px;
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 100;
}

#projects ul {
    list-style: none;
}

.project-container {
    width: 80%;
    height: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 50px;
    margin-bottom: 100px;
    display: flex;
    flex-direction: column;
    opacity: 0;
}

.project-container iframe {
    width: 100%;
    height: 100%;
    border-radius: 10px;
    aspect-ratio: 16/9;
    z-index: 10;
}

.project-title {
    font-size: 30px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: 500;
    letter-spacing: 2px;
    margin-top: 15px;
}

.project-description {
    text-align: start;
}

.project-words {
    width: 50%;
    height: 80%;
    padding-left: 25px;
    display: flex;
}

.bar {
    background-color: #848484;
    height: 35px;
    width: 10px;
    margin-right: 10px;
    margin-top: 15px;
    margin-bottom: 15px;
    z-index: 1;
}

.specific-description {
    opacity: 0;
    z-index: 0;
}

.grouped-sections {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
    margin-bottom: 100px;
}

#about {
    padding-bottom: 50px;
}

#about img {
    width: 300px;
    height: 300px;
    object-fit: cover;
    object-position: bottom;
    max-width: 300px;
    border-radius: 50%;
    margin: 15px auto;
    display: block;
}

#about p {
    width: 30%;
    min-width: 300px;
    margin: 0 auto;
}

#about, #contact {
    width: 100%;
}

#contact {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.socials {
    margin: 0 auto;
    list-style: none;
}

.socials a {
    font-size: 35px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-decoration: none;
    color: white;
    transition: 0.1s ease-in-out;
}

.socials a:hover {
    color: #848484;
    border-radius: 5px;
}

.email {
    padding-bottom: 80px;
    font-size: 25px;
}

@media (max-width: 750px) {
    .project-container {
        flex-direction: column;
    }
    .project-words {
        width: 100%;
        padding: 0;
        padding-bottom: 20px;
        padding-top: 20px;
    }
    .nav-links {
        padding: 0;
        margin: 0;
    }
    .nav-links ul {
        padding: 0;
        margin: 0;
        display: flex;
        justify-content: center;
    }
    .nav-links li {
        padding: 0;
        margin: 20px;
    }
    .grouped-sections {
        flex-direction: column;
        align-items: center;
    }
    #about img {
        width: 200px;
        height: 200px;
    }
    #contact {
        margin-top: 50px;
    }
    #contact h2 {
        margin-bottom: 15px;
    }
}

